# Cambricon-Gst

./: .clang-format  .gitignore  CHANGES  CMakeLists.txt  README.md  README_cn.md
easydk/: .clang-format  .gitignore  CMakeLists.txt  CPPLINT.cfg  LICENSE  README.md  README_cn.md  edk_config.h.in
easydk/cmake/: FindMLU.cmake
easydk/include/cxxutil/: edk_attribute.h  exception.h  log.h  noncopy.h  rwlock.h  spinlock.h  threadsafe_queue.h
easydk/include/device/: mlu_context.h  version.h
easydk/include/easybang/: resize.h  resize_and_colorcvt.h
easydk/include/easycodec/: easy_decode.h  easy_encode.h  vformat.h
easydk/include/easyinfer/: easy_infer.h  mlu_memory_op.h  model_loader.h  shape.h
easydk/include/easytrack/: easy_track.h
easydk/include/internal/: cnrt_wrap.h  mlu_task_queue.h
easydk/src/cxxutil/: log.cpp
easydk/src/device/: mlu_context.cpp
easydk/src/easybang/resize/: resize.cpp  resize_bang.cpp
easydk/src/easybang/resize_and_convert/: half.cpp  resize_and_colorcvt.cpp
easydk/src/easycodec/: easy_decode.cpp  easy_encode.cpp  format_info.cpp  progressive_jpeg.cpp  progressive_jpeg.h  vpu_turbo_table.h
easydk/src/easyinfer/: easy_infer.cpp  mlu_memory_op.cpp  model_loader.cpp  shape.cpp
easydk/src/easytrack/: hungarian.cpp  hungarian.h  kalmanfilter.cpp  kalmanfilter.h  match.cpp  match.h  matrix.cpp  matrix.h  track_data_type.h  track_fm.cpp  track_kcf.cpp
easydk/src/easytrack/kcf/: kcf.cpp  kcf.h  kcf_macro.h
easydk/tools/: copy_neuware_mlu270.sh
gst/: plugin_register.cpp
gst-libs/common/: frame_deallocator.h  gst_mlu_frame.cpp  gst_mlu_frame.h  mlu_memory_meta.cpp  mlu_memory_meta.h  mlu_utils.h  synced_memory.cpp  synced_memory.h  utils.h
gst/convert/: gstcnconvert.cpp  gstcnconvert.h
gst/decode/: gstcndecode.cpp  gstcndecode.h  gstcnvideo_dec.cpp  gstcnvideo_dec.h
gst/encode/: encode_type.h  gstcnencode.cpp  gstcnencode.h  gstcnvideo_enc.cpp  gstcnvideo_enc.h
samples/demo/: CMakeLists.txt  demo.cpp  run.sh
samples/launch-scripts/: run-jpeg-decode.sh  run-video-transcode.sh
tests/: CMakeLists.txt  clean.sh  test_all_plugins.sh
tests/data/: cars_224x224_rgba.yuv  cars_300x300_bgr.yuv  cars_300x300_bgr_1f.yuv  cars_320x300_nv21.yuv
tests/src/: test_gstcnconvert.cpp  test_gstcndecode.cpp  test_gstcnencode.cpp  test_main.cpp
tools/: lintgit
